# quill-init

./: .gitignore  .gitmodules  Cargo.toml  deploy-ssh.sh
libqinit/: Cargo.toml
libqinit/src/: battery.rs  boot_config.rs  brightness.rs  eink.rs  flag.rs  flags.rs  lib.rs  netboot.rs  networking.rs  recovery.rs  rootfs.rs  rootfs_socket.rs  signing.rs  socket.rs  splash.rs  storage_encryption.rs  system.rs  systemd.rs  wifi.rs
notify_fatal_error/: Cargo.toml
notify_fatal_error/src/: main.rs
qinit/: Cargo.toml  build.rs
qinit/src/: debug.rs  eink.rs  gui.rs  main.rs
qinit/ui/: app-window.slint
qrecovery/: Cargo.toml
socket_tester/: Cargo.toml
socket_tester/src/: main.rs
src/: debug.rs  eink.rs  functions.rs  gui.rs  logging.rs  main.rs  signing.rs  system.rs
ui-common/: button.slint  dialog.slint  hline.slint  hlist.slint  iconbutton.slint  lineedit.slint  minorbutton.slint  moving-dots.slint  progressbar.slint  properties.slint  sectionbutton.slint  slider.slint  switch.slint  toast.slint  vline.slint
ui-common/virtual_keyboard/: icons.slint  virtual_keyboard.slint
