[package]
name = "libqinit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
cfg-if = "1.0.1"
env_logger = "0.11.8"
fs_extra = "1.3.0"
log = "0.4.27"
openssl = "0.10.73"
regex = "1.11.1"
rmesg = { version = "1.0.23", features = ["sync"] }
ron = "0.10.1"
serde = "1.0.219"
serde-bool = "0.1.3"
sha256 = "1.6.0"
strum_macros = "0.27.1"
sys-mount = "3.0.1"

[features]
debug = []
free_roam = []
