[package]
name = "notify_fatal_error"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
libqinit = { version = "0.1.0", path = "../libqinit" }
postcard = { version = "1.1.2", features = ["alloc"] }

[features]
debug = []
free_roam = []
gui_only = []
init_wrapper = []
