[package]
name = "qinit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cfg-if = "1.0.1"
crossterm = "0.29.0"
env_logger = "0.11.8"
log = "0.4.27"
network-interface = "2.0.1"
slint = { git = "https://github.com/PorQ-Pine/slint.git", default-features = false, features = ["compat-1-2", "backend-linuxkms-noseat", "libm", "log", "renderer-software"] }
sys-mount = { version = "3.0.1", default-features = false }
libqinit = { path = "../libqinit" }
openssl = "0.10.73"
embed-file = "0.2.0"
regex = "1.11.1"
exec = "0.3.1"
postcard = { version = "1.1.2", features = ["alloc", "postcard-derive"] }
serde = "1.0.219"
qrcode-generator = "5.0.0"
signal-hook = "0.3.18"
nix = { version = "0.30.1", features = ["process", "hostname"] }
chrono = { version = "0.4.41", features = ["std"], default-features = false }
git-const = "1.1.0"
libquillcom = { git = "https://github.com/PorQ-Pine/libquillcom" }

[build-dependencies]
slint-build = { git = "https://github.com/PorQ-Pine/slint.git" }

[features]
debug = ["libqinit/debug"]
free_roam = ["libqinit/free_roam"]
gui_only = ["libqinit/gui_only"]
init_wrapper = ["libqinit/init_wrapper"]
