[package]
name = "socket_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
postcard = { version = "1.1.2", features = ["alloc"] }
libquillcom = { git = "https://github.com/PorQ-Pine/libquillcom" }
env_logger = "0.11.8"
log = "0.4.28"

[features]
debug = []
free_roam = []
gui_only = []
init_wrapper = []
